Features: 1. Added CosineSimilarity. 2. Implemented user querying and handling it.